# Modern-Apps

./: .gitattributes  .gitignore  GOOGLE_VOICE_CALLING_HANDOFF.md  GOOGLE_VOICE_CALLING_PLAN.md  NETWORK_CAPTURE_PLAN.md  README.md  all_kt_files.txt  build.gradle.kts  gradle.properties  proguard-rules.pro  release_keystore.jks  settings.gradle.kts  version.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: CI.yml  android.yml  issue_labeler.yml  pr-compile-check.yml
astronomy/: build.gradle.kts
astronomy/src/main/: AndroidManifest.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: RoomExtension.kt  common-conventions-app.gradle.kts  common-conventions-library.gradle.kts  common-conventions-metadata.gradle.kts
calendar/: build.gradle.kts
calendar/src/main/: AndroidManifest.xml
camera/: build.gradle.kts
camera/rust/: Cargo.toml
camera/rust/src/: blend.rs  bundle.rs  estimator.rs  exposure.rs  imgbuf.rs  lib.rs  matching.rs  seam.rs  sphere.rs  stitch.rs  warp.rs
camera/src/main/: AndroidManifest.xml
camera/src/main/rust/: rust-toolchain.toml
camera/src/main/rust/src/: blend.rs  (+7 more)
chess/: build.gradle.kts
chess/src/main/: AndroidManifest.xml
clock/: build.gradle.kts
clock/schemas/com.vayunmathur.clock.data.ClockDatabase/: 1.json
clock/src/main/: AndroidManifest.xml
contacts/: build.gradle.kts
contacts/src/main/: AndroidManifest.xml
crypto/: build.gradle.kts
crypto/src/main/: AndroidManifest.xml
dialer/: build.gradle.kts
dialer/src/main/: AndroidManifest.xml
education/: build.gradle.kts
email/: build.gradle.kts
email/src/main/: AndroidManifest.xml
everysync/: build.gradle.kts
everysync/src/main/: AndroidManifest.xml
files/: build.gradle.kts
files/src/main/: AndroidManifest.xml
findfamily/: build.gradle.kts
findfamily/schemas/com.vayunmathur.findfamily.data.FFDatabase/: 1.json
findfamily/src/main/: AndroidManifest.xml
games/alchemist/: build.gradle.kts
games/app/: build.gradle.kts
games/app/src/main/: AndroidManifest.xml
games/chess/: build.gradle.kts
games/chess/src/main/: AndroidManifest.xml
games/chess/src/main/cpp/: CMakeLists.txt
games/hub/: build.gradle.kts
games/hub/src/main/: AndroidManifest.xml
games/logicgate/: build.gradle.kts
games/logicgate/src/main/: AndroidManifest.xml
games/pipes/: build.gradle.kts
games/solitaire/: build.gradle.kts
games/unblockjam/: build.gradle.kts
games/unblockjam/src/main/: AndroidManifest.xml
games/wordmaker/: build.gradle.kts
games/wordmaker/dict/: extract_de.py  generate_levels.py
games/wordmaker/src/main/: AndroidManifest.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle-module-explorer/: .vscodeignore  README.md  extension.js  package.json
gradle/wrapper/: gradle-wrapper.properties
health/: build.gradle.kts
health/src/main/: AndroidManifest.xml
launcher/: build.gradle.kts
launcher/src/main/: AndroidManifest.xml
maps/: build.gradle.kts
maps/schemas/com.vayunmathur.maps.data.AmenityDatabase/: 1.json
maps/src/main/: AndroidManifest.xml
maps/src/main/assets/: admin0.fgb  admin1.fgb  style.json
maps/src/main/cpp/: CMakeLists.txt  bucket_queue.h  native-lib.cpp  radix_heap.h  scratchpad.cpp  scratchpad.h
messages/: MEDIA_FEATURES_CONTRACTS.md  RCS_IMPLEMENTATION.md  build.gradle.kts
messages/src/main/: AndroidManifest.xml
messages/src/main/proto/: account.proto  requests.proto  responses.proto  whatsapp_e2e.proto
metadata_data/: alchemist.md  astronomy.md  findfamily.md  games-hub.md  maps.md  openassistant.md  photos.md  youpipe.md
music/: build.gradle.kts
music/schemas/com.vayunmathur.music.database.MusicDatabase/: 1.json
music/src/main/: AndroidManifest.xml
netcapture/: build.gradle.kts
netcapture/src/main/: AndroidManifest.xml
notes/: build.gradle.kts
notes/schemas/com.vayunmathur.notes.data.database.NoteDatabase/: 2.json
notes/src/main/: AndroidManifest.xml
office/: build.gradle.kts
office/src/main/: AndroidManifest.xml
openassistant/: build.gradle.kts
openassistant/schemas/com.vayunmathur.openassistant.AppDatabase/: 1.json
openassistant/schemas/com.vayunmathur.openassistant.data.database.MessageDatabase/: 5.json
openassistant/src/main/: AndroidManifest.xml
passwords/: build.gradle.kts
passwords/schemas/com.vayunmathur.passwords.data.PasswordDatabase/: 2.json
passwords/src/main/: AndroidManifest.xml
pdf/: build.gradle.kts
pdf/rust/src/: lib.rs
pdf/src/main/: AndroidManifest.xml
pdf/src/main/rust/: Cargo.toml  README.md
pdf/src/main/rust/src/: crypto.rs  filters.rs  jbig2.rs  lib.rs  shading.rs  type3.rs
photos/: build.gradle.kts
photos/schemas/com.vayunmathur.photos.data.PhotoDatabase/: 1.json
photos/src/main/: AndroidManifest.xml
pjsip/: build.gradle.kts
scripts/: generate_astronomy_catalogs.py
scripts/chess/: extract_learn.py  generate_puzzles.py
scripts/maps/: extract_pmtiles.sh  generator.cpp  run_generator.sh
scripts/photos/: README.md  prepare_models.py
scripts/wordmaker/: BAD_WORDS_GUIDE.md  DATA_SOURCES.md  bad-words.txt  common_words_de.txt  extract_de.py  extract_freedict.py  generate_levels_de.py
sdk/games/src/main/: AndroidManifest.xml
things/: build.gradle.kts  scale.md
things/hardware/scale/: fp-lib-table  scale.kicad_pcb  scale.kicad_prl  scale.kicad_pro  scale.kicad_sch  sym-lib-table
things/hardware/scale/fab/: CPL_top.csv  import_bom.csv
tools/holidaygen/: build.gradle.kts
travel/: build.gradle.kts
travel/src/main/: AndroidManifest.xml
watch/phone/: build.gradle.kts
watch/watch/: build.gradle.kts
weather/: build.gradle.kts
weather/rust/: Cargo.toml  README.md
weather/rust/src/: lib.rs
weather/src/main/rust/: Cargo.toml  README.md
web/: build.gradle.kts
whatsapp-signal/: build.gradle.kts
youpipe/: build.gradle.kts  proguard-rules.pro
youpipe/extractor/: build.gradle.kts
youpipe/ffmpeg/: build.gradle.kts
youpipe/schemas/com.vayunmathur.youpipe.data.SubscriptionDatabase/: 1.json
youpipe/src/main/: AndroidManifest.xml
(+3892 files in other folders)
