[package]
name = "camera_stitch"
version = "0.1.0"
edition = "2021"
description = "Feature-based panorama stitcher + night burst aligner for the camera app, exposed to Kotlin via JNI (replaces OpenCV)"
license = "GPL-2.0-only"

[lib]
name = "camera_stitch"
# cdylib => libcamera_stitch.so for Android; rlib => host `cargo test`.
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
nalgebra = "0.33"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
